fix line wrap

--- a/style/table-filters.css
+++ b/style/table-filters.css
@@ -254,6 +254,7 @@
 
 .concatenation-rule {
   color: rgba(253, 251, 254, 1);
+  width: max-content;
 }
 
 .remove-filters-group {
